# solar-system

./: .gitignore  CMakeLists.txt  ConeFileGenerator.cpp  ConeFileGenerator.h  Makefile  PlaneFileGenerator.c  PlaneFileGenerator.h  README.md  SphereFileGenerator.c  SphereFileGenerator.h  a.out  box.3D  box.3d  dados.txt  design.cpp  engine  exemplo.3d  file.xml  filterPoints  generator  generator.c  generator.h  generatorCone.cpp  generatorCone.h  main.cpp  newSphereGenerator.c  newSphereGenerator.h  parser  plane.3D  plane.3d  sphere.3D  sphere.3d  sphere3.3d  teapot.xml  teste  teste.3d  testeFilter.c  untitled.c
Figuras Finais e Ficheiros necessarios/: cone.3d  plane.3d  sphere2.3d
bin_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  engine  file.xml
bin_osx/: CMakeCache.txt  Makefile  cmake_install.cmake  engine  file.xml
bin_windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  engine.sln  engine.vcxproj  engine.vcxproj.filters
bin_windows_engine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  a.3d  box.3d  cmake_install.cmake  cone.3d  engine.sln  engine.vcxproj  engine.vcxproj.filters  file.xml  file_test.xml  sphere.3d  sphere1.3d  sphere2.3d  sphere3.3d  teapot.3d  teapot.xml
bin_windows_generator/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  file.xml  (+5 more)
generator_CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
(+164 files in other folders)
